<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_blue"
    tools:context=".ActivityEditPet">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="50dp"
        android:contentDescription="avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kitty" />


    <Spinner
        android:id="@+id/spinnerPetsType"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:entries="@array/pets"
        app:layout_constraintEnd_toEndOf="@+id/ivPhoto"
        app:layout_constraintStart_toStartOf="@+id/ivPhoto"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

    <EditText
        android:id="@+id/edNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/Name"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerPetsType"
        app:layout_constraintStart_toStartOf="@+id/spinnerPetsType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPetsType" />

    <EditText
        android:id="@+id/edAgeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edNameValue"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edNameValue"
        app:layout_constraintTop_toBottomOf="@+id/edNameValue" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/btEdit"
        app:backgroundTint="@color/mint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit_pen" />

    <EditText
        android:id="@+id/edWeightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Weight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edAgeValue"
        app:layout_constraintStart_toStartOf="@+id/edAgeValue"
        app:layout_constraintTop_toBottomOf="@+id/edAgeValue" />

    <EditText
        android:id="@+id/edHeightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Height"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edWeightValue"
        app:layout_constraintStart_toStartOf="@+id/edWeightValue"
        app:layout_constraintTop_toBottomOf="@+id/edWeightValue" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edNameValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPetsType" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Age"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edAgeValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Weight"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edWeightValue"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Height"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/edHeightValue"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/VaccineDate"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edHeightValue" />

    <EditText
        android:id="@+id/edVaccinationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="2023-01-01"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>